# spot_audio

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  setup.cfg  setup.py
data/: prompts.txt
launch/: microphone.launch.py  spot_audio.launch.py
respeaker_ros/: respeaker_node.py
scripts/: generate_text.py
spot_audio/: audio_classification_node.py  interface.py  microphone_lifecycle_node.py  microphone_node.py  respeaker_node.py  speaker_lifecycle_node.py  speaker_node.py
spot_audio/microphone/: audio_classifier.py  microphone_device.py  transcriber.py  util.py
spot_audio/speaker/: speaker_device.py
