<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>spot_audio</name>
  <version>0.0.1</version>
  <description>spot audio package</description>
  <maintainer email="zbortoff@gmail.com">cdcl</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>audio_common_msgs</depend>
  <depend>cdcl_umd_msgs</depend>
  <depend>diagnostic_updater</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
